...
    <string name="app_name">GitSy</string>
    <string name="About">About</string>
    <string name="CloneRepo">Clone Repo</string>
    <string name="ResetRepo">Reset Repo</string>
    <string name="SyncRepo">Synchronize Repo</string>
    <string name="AddRepo">Add Repo</string>
    <string name="SyncAll">Sync All</string>
    <string name="edit_project_title">Edit Project</string>
    <string name="select_project_folder">Select Project Folder</string>
    <string name="repository_url">Repository URL</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="foreground_service_title">GitSy Sync Service</string>
...
    <string name="token_note">* Please note gitlab/github does not use username passwords. Please use access tokens instead.</string>
    <string name="https_note">** At the moment only HTTPS git urls are supported. Follow the guide of how to create gitlab/github repository accessed with username/password.</string>

    <string name="application_was_stopped">Application was stopped</string>
    <string name="application_was_stopped_message">Looks like application was stopped during synchronization process, this could cause unexpected results, please keep application open during synchronization!</string>

    <string name="startup_sync_settings_menu">Startup synchronization</string>
    <string name="startup_sync_settings_title">Startup synchronization</string>
    <string name="startup_sync_explanation">Choose whether projects synchronize automatically when GitSy starts.</string>
    <string name="startup_sync_mode_never">Never</string>
    <string name="startup_sync_mode_ask_if_stale">Ask if stale</string>
    <string name="startup_sync_mode_if_stale">If stale</string>
    <string name="startup_sync_mode_always">Always</string>
    <string name="startup_sync_interval_label">Synchronize when last sync is older than</string>
    <string name="startup_sync_interval_15_minutes">15 minutes</string>
    <string name="startup_sync_interval_1_hour">1 hour</string>
    <string name="startup_sync_interval_6_hours">6 hours</string>
    <string name="startup_sync_interval_24_hours">24 hours</string>
    <string name="save">Save</string>
    <string name="startup_sync_prompt_title">Synchronize projects?</string>
    <plurals name="startup_sync_prompt_message">
        <item quantity="one">%1$d project has not been synchronized for %2$s. Synchronize it now?</item>
        <item quantity="other">%1$d projects have not been synchronized for %2$s. Synchronize them now?</item>
    </plurals>
    <string name="startup_sync_prompt_synchronize">Synchronize</string>
...
